# juxi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  local.example.py  package.json  pyproject.toml  settings.py  tailwind.config.js  urls.py
.run/: juxi.run.xml  serv.run.xml  tailwind.run.xml
deploy/: Dockerfile  juxi.py  nginx.conf
flask/: Dockerfile  README.md  pyproject.toml
flask/models/: user.py
flask/static/: juxi.min.css
juxi/: asgi.py  urls.py  wsgi.py
juxi/admin/: __init__.py  schedule.py
juxi/data/: schedule.py
juxi/forms/: auth.py
juxi/middleware/: auth.py  stats.py  tz.py
juxi/migrations/: 0001_initial.py  0002_alter_taskrun_end_at.py  0002_taskrun_end_at_alter_taskrun_code_and_more.py  0003_taskrun_status_taskrun_triggered_by_and_more.py
juxi/models/: __init__.py  schedule.py
juxi/query/: schedule.py
juxi/static/: juxi.js
juxi/templates/: base.html  home.html  login.html  logout.html  messages.html  tasks.html
juxi/templatetags/: jx_time.py
juxi/util/: render.py  schedule.py  url.py
juxi/views/: auth.py  home.py  tasks.py  util.py
src/templates/: base.html  index.html  login.html  login_form.html
tailwind/: juxi.css
templates/: base.html  login.html  logout.html
tests/util/: test_schedule.py  test_schedule_days.py  test_schedule_minutes.py  test_schedule_monthly.py  test_schedule_util.py
views/: auth.py
