
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juxi"
version = "0.1.0"
authors = [
    { name="Mark Verleg", email="mverleg.noreply@gmail.com" },
]
description = "Simple webservice for some testing and deployment automation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "waitress>=3.0.2",
    "django>=5.1.0,<6.0.0",
    "pytz",
    "python-dateutil",
]
[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
py-modules = ["juxi"]


[project.urls]
Homepage = "https://github.com/mverleg/juxi"
Issues = "https://github.com/mverleg/juxi/issues"
